--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "jest",
-    "npx eslint --fix": "eslint --fix --ext .js,.jsx ."
+    "lint": "npx eslint ."
   },
   "author": "egor-andreychuk",
   "license": "ISC",
@@ -24,7 +24,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-winston": "^4.2.0",
-    "http2": "^3.3.7",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
